duniverse/menhirLib.20200211/test/static/bad/non-terminal-multiple-branch-groups.mly
%start<int> a
%%

b: {}
b: {}
