duniverse/menhirLib.20200211/test/static/bad/non-terminal-multiple-branch-groups.exp
File "non-terminal-multiple-branch-groups.mly", line 4, characters 0-1:
File "non-terminal-multiple-branch-groups.mly", line 5, characters 0-1:
Error: the nonterminal symbol b is multiply defined.
Only %public symbols can have split definitions.
